--- a/2pr/vk_api_df.ipynb
+++ b/2pr/vk_api_df.ipynb
@@ -967,7 +967,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Центральность по собственному вектору\n",
     "eigenvector_centrality = sorted(list(nx.eigenvector_centrality(G1, max_iter=600).items()), key=lambda i: i[1], reverse=True)"
    ]
   },
@@ -1160,13 +1159,10 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "\n",
-    "# Например, выбрать случайные 1000 узлов для оценки\n",
     "subset_nodes = random.sample(list(G1.nodes()), 1000)\n",
     "closeness_centrality_subset = {node: nx.closeness_centrality(G1, u=node) for node in subset_nodes}\n",
-    "\n",
     "# Сортируем по значению центральности\n",
-    "closeness_centrality_subset = sorted(closeness_centrality_subset.items(), key=lambda i: i[1], reverse=True)\n"
+    "closeness_centrality_subset = sorted(closeness_centrality_subset.items(), key=lambda i: i[1], reverse=True)"
    ]
   },
   {
