--- a/4pr/agent.ipynb
+++ b/4pr/agent.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Функция выбора действия с использованием ε-жадного метода\n",
+    "# Функция выбора действия\n",
     "Выбирает действие агента: случайное (для исследования) или с наибольшим Q-значением (для использования опыта)\n",
     "___\n",
     "**параметры:**  \n",
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Функция выбора действия с использованием ε-жадного метода\n",
+    "# Функция выбора действия\n",
     "def choose_action(state, q_table):\n",
-    "    if random.uniform(0, 1) < random_move_probability: # \n",
+    "    if random.uniform(0, 1) < random_move_probability: \n",
     "        return random.choice([i for i in range(9) if state[i] == 0]) # индекс выбранного действия (случайный)\n",
     "    else:\n",
     "        q_values = [q_table[(tuple(state), a)] for a in range(9)] # агент ставит крестик\\нолик в клетку с наибольшей ценностью\n",
